# CUDA

./: CMakeLists.txt  README.md  main.cu  unit_test_core.cu
conf/: config.csv
data/: prepare_dataset.py
